--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "bootstrap": "4.6.0",
+    "bootstrap": "5",
+    "bootstrap-vue": "2.21.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.3.0"
