--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.22.0"
+    "eslint-plugin-vue": "^9.22.0",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1"
   },
   "eslintConfig": {
     "root": true,
